Fix image tooltip overflow

--- a/frontend/styles/index.styl
+++ b/frontend/styles/index.styl
@@ -28,3 +28,7 @@
 
 .badge-id
   margin-right 0.5em
+
+// Fix for image tooltip
+.ql-container
+  overflow visible!important
